--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	implementation 'com.mysql:mysql-connector-j'
+
 	// woo 2022.04.24 fox swagger
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
