--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    url: ${DB_URL}
-    username: ${DB_USER}
-    password: ${DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:h2:tcp://localhost/~/doneit
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
-      ddl-auto:
+      ddl-auto: create-drop
     properties:
       hibernate:
         show_sql: true
@@ -15,7 +15,7 @@ spring:
 
 server:
   address: 0.0.0.0
-  port: ${SERVER_PORT_1}
+  port: 8081
 
 logging:
   level:
