--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// woo 2022.04.23
-	implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0")
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 
-    testImplementation 'junit:junit:4.13.1'
+	// GET:/actuator/health for healthcheck
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	testImplementation 'junit:junit:4.13.1'
     compileOnly 'org.projectlombok:lombok'
 //	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
